tests/ui/trailing_punct.stderr
error: unexpected token in path segment
 --> tests/ui/trailing_punct.rs:4:19
  |
4 | type X = Cursor!( . );
  |                   ^
